Content structure (draft)

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,2 +1,15 @@
-= oCis
+= Introduction to ownCloud Infinite Scale
 
+Welcome to the ownCloud Infinite Scale (oCIS) documentation. This guide provides information on installation and administration tasks for oCIS, the next generation of open source file sharing and synchronization solutions.
+
+Here you find information on:
+
+* Prerequisites
+* Deployment Considerations
+* Installation
+* Migration from the classic ownCloud Server to oCIS
+* Configuration
+* Maintenance
+...
+
+More about oCIS...
