--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -1,2 +1,8 @@
-* xref:index.adoc[Overview]
-* oCis Overview Line Entry 
+* xref:index.adoc[Introduction]
+* ownCloud Infinite Scale 
+** xref:prerequisites/index.adoc[Prerequisites]
+** xref:deployment/index.adoc[Deployment Considerations]
+** xref:installation/index.adoc[Installation]
+** xref:migration/index.adoc[Migrating from ownCloud 10 to ownCloud Infinite Scale]
+** xref:configuration/index.adoc[Configuration]
+** xref:maintenance/index.adoc[Maintenance]
