--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -5,7 +5,7 @@ Welcome to the ownCloud Infinite Scale (oCIS) documentation. This guide provides
 Here you find information on:
 
 * Prerequisites
-* Architecture, Spaces Concept
+* Architecture and Concepts
 * Deployment Considerations
 * Installation
 * Migration from the classic ownCloud Server to oCIS
