--- a/modules/ROOT/pages/deployment/index.adoc
+++ b/modules/ROOT/pages/deployment/index.adoc
@@ -46,7 +46,7 @@ ownCloud Infinite Scale comes with demo users that should be deleted for securit
 
 oCIS uses two system users necessary for proper operation:
 
-* Reva Inter Operability Platform (ID: bc596f3c-c955-4328-80a0-60d018b4ad57)
+* Reva Inter-Operability Platform (ID: bc596f3c-c955-4328-80a0-60d018b4ad57)
 
 * Kopano IDP (ID: 820ba2a1-3f54-4538-80a4-2d73007e30bf)
 
@@ -54,7 +54,7 @@ Both have simple default passwords which need to be changed. Currently, changing
 
 //The "currently" is still true?
 
-The new password for the Reva Inter Operability Platform user must be made available to oCIS by using the environment variable `STORAGE_LDAP_BIND_PASSWORD`. The same applies to the new Kopano IDP user password, which needs do be made available to oCIS in `IDP_LDAP_BIND_PASSWORD`.
+The new password for the Reva Inter-Operability Platform user must be made available to oCIS by using the environment variable `STORAGE_LDAP_BIND_PASSWORD`. The same applies to the new Kopano IDP user password, which needs do be made available to oCIS in `IDP_LDAP_BIND_PASSWORD`.
 
 //Where is this setting?
 
@@ -81,9 +81,9 @@ oCIS ships with five demo users for our customers to play around with before the
 You can see them in ownCloud Web if you log in as Admin user or list them by running `ocis accounts list`. This demo users should be deleted for security reasons.
 
 CAUTION: Before you delete these users, you must create a new account for yourself and assign it the administrator role. To prevent the generation of demo users, run the initial setup with an additional environment variable:
-`ACCOUNTS_DEMO_USERS_AND_GROUPS=false ./bin/ocis server`. In this case, only the user Admin is created plus the system users for IDP and Reva.
+`ACCOUNTS_DEMO_USERS_AND_GROUPS=false ./bin/ocis server`. In this case, only the user Admin is created plus the system users for IDP and Reva IOP.
 
-After you have added an additional user with admin priviledges, either delete the demo users in ownCloud Web or use the command `ocis accounts remove <ID>`.
+After you have added an additional user with admin privileges, either delete the demo users in ownCloud Web or use the command `ocis accounts remove <ID>`.
 
 CAUTION: Do not delete any of the system users but change their default secrets instead.
 
