--- a/modules/ROOT/pages/architecture/index.adoc
+++ b/modules/ROOT/pages/architecture/index.adoc
@@ -10,7 +10,7 @@
 
 // harvested from https://owncloud.dev/ocis/
 
-Running `bin/ocis` server will start the following services, which can be scaled and deployed on a single node or in a cloud native environment, as needed.
+Running `ocis server` will start the following services, which can be scaled and deployed on a single node or in a cloud native environment, as needed.
 
 image:architecture/architecture-overview.drawio.svg[]
 
@@ -50,11 +50,11 @@ oCIS runtime allows us to dynamically manage services running in a single proces
 
 === oCIS Extensions
 
-Every oCIS extension uses ocis-pkg, which implements the go-micro interfaces for servers to register and clients to lookup nodes with a service registry. We are following the 12 Factor methodology with oCIS. The uniformity of services also allows us to use the same command, logging and configuration mechanism. Configurations are forwarded from the oCIS runtime to the individual extensions.
+Every oCIS extension uses ocis-pkg, which implements the go-micro interfaces for servers to register and clients to look up nodes with a service registry. We are following the 12-factor methodology with oCIS. The uniformity of services also allows us to use the same mechanism for commands, logging and configuration. Configurations are forwarded from the oCIS runtime to the individual extensions.
 
 === Go-Micro
 
-While the go-micro framework provides abstractions as well as implementations for the different components in a microservice architecture, it uses a more developer focused runtime philosophy: It is used to download services from a repo, compile them on the fly and start them as individual processes. For oCIS we decided to use a more admin friendly runtime: You can download a single binary and start the contained oCIS extensions with a single `bin/ocis` server. This also makes packaging easier.
+While the go-micro framework provides abstractions as well as implementations for the different components in a microservice architecture, it uses a more developer focused runtime philosophy: It is used to download services from a repo, compile them on the fly and start them as individual processes. For oCIS we decided to use a more admin-friendly runtime: You can download a single binary and start the contained oCIS extensions with a single ocis server`. This also makes packaging easier.
 
 
 === REVA
