--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -2,8 +2,7 @@
 * ownCloud Infinite Scale 
 ** xref:prerequisites/index.adoc[Prerequisites]
 ** xref:architecture/index.adoc[Architecture and Conecpts]
-** xref:deployment/index.adoc[Deployment Considerations]
-** xref:installation/index.adoc[Installation]
+** xref:deployment/index.adoc[Deployment]
 ** xref:migration/index.adoc[Migrating from ownCloud 10 to ownCloud Infinite Scale]
 ** xref:configuration/index.adoc[Configuration]
 ** xref:maintenance/index.adoc[Maintenance]
